--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "nodejs-simplepdfmerger",
-  "version": "0.0.3",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/cluster"
-  },
-  "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "hbs": "~4.0.1",
-    "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2",
-    "pdfmerger": "~0.1.1",
-    "multer": "~1.3.0",
-    "tmp": "~0.0.31"
-  }
+    "name": "nodejs-simplepdfmerger",
+    "version": "0.0.3",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/cluster"
+    },
+    "dependencies": {
+        "body-parser": "~1.17.1",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.6.3",
+        "express": "~4.15.2",
+        "hbs": "~4.0.1",
+        "morgan": "~1.8.1",
+        "serve-favicon": "~2.4.2",
+        "pdfmerger": "~0.1.1",
+        "multer": "~1.3.0",
+        "tmp": "~0.0.31",
+        "mime-types": "~2.1.15",
+        "pdfkit": "~0.8.2",
+        "image-size": "~0.5.5"
+    }
 }
