--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "tmp": "~0.0.31",
         "mime-types": "~2.1.15",
         "pdfkit": "~0.8.2",
-        "image-size": "~0.5.5"
+        "image-size": "~0.5.5",
+        "jpeg-autorotate": "~3.0.0"
     }
 }
